--- a/app/src/main/res/layout/fragment_add2.xml
+++ b/app/src/main/res/layout/fragment_add2.xml
@@ -97,13 +97,23 @@
                     android:textColor="@color/black"
                     android:textSize="20sp" />
 
-                <EditText
-                    android:id="@+id/taskDate"
-                    android:layout_width="match_parent"
-                    android:layout_height="45dp"
-                    android:hint="Date And Time"
-                    android:inputType="text"
-                    android:textColor="@color/black" />
+                <Button
+                    android:id="@+id/btn_time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="Date"
+                    android:textColor="@color/black"
+                    />
+                <TextView
+                    android:id="@+id/add_timeline"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:text="Timeline"
+                    android:textColor="@color/black"
+                    android:layout_gravity="center"
+                    android:textSize="20sp" />
 
 
             </LinearLayout>
