--- a/app/src/main/res/layout/fragment_add2.xml
+++ b/app/src/main/res/layout/fragment_add2.xml
@@ -98,7 +98,7 @@
                     android:textSize="20sp" />
 
                 <Button
-                    android:id="@+id/btn_time"
+                    android:id="@+id/btn_timeline"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -106,11 +106,20 @@
                     android:textColor="@color/black"
                     />
                 <TextView
-                    android:id="@+id/add_timeline"
+                    android:id="@+id/texttime"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
-                    android:text="Timeline"
+                    android:text="Time"
+                    android:textColor="@color/black"
+                    android:layout_gravity="center"
+                    android:textSize="20sp" />
+                <TextView
+                    android:id="@+id/textdate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:text="Date"
                     android:textColor="@color/black"
                     android:layout_gravity="center"
                     android:textSize="20sp" />
